--- a/templates/result.html
+++ b/templates/result.html
@@ -237,7 +237,7 @@
   </div>
 
   <div  style="display: inline;">
-    <div style="width: 500px; float: left; margin-left: 130px;">
+    <div style="height: 10%; width: 500px; float: left; margin-left: 130px;">
       <button type="button" class="media content-section-result-metric" data-toggle="modal" data-target="#TwitterModal">
         <i class="material-icons" style="font-size:30px; margin-top:5px; margin-right:10px;">control_point</i>
         <h2 align="center">Social Media </h2>
