--- a/templates/layout.html
+++ b/templates/layout.html
@@ -15,7 +15,7 @@
     {% if title %}
         <title>{{ title }}</title>
     {% else %}
-        <title>Flask Blog</title>
+        <title>Misinformation Detector</title>
     {% endif %}
 </head>
 <body>
@@ -54,7 +54,7 @@
 
       {% block content %}{% endblock %}
     <div class="header notice">
-      <h1>Notice: The purpose of this tool is to classify the news to help the consumers to judge the news and not to decide whether is True or False. </h1>
+      <h1>Disclaimer: The purpose of this tool is to classify the news to help the consumers to judge the news and not to decide whether is True or False. <br> This site uses cookies in order to offer you the most relevant Information <br> We are thankful to INCD (Infraestrutura Nacional de Computação Distríbuida) to offer us the server to host this site. </h1>
     </div>
     </div>
 
