--- a/templates/evaluation_message.html
+++ b/templates/evaluation_message.html
@@ -5,11 +5,20 @@
 <div class="message-evaluation">
 	<p>Thank you for helping in my assessment!</p>
 	<p>There are more {{ value }} assessement to answer.Would you like to answer one more?</p>
-	<div style="display: inline-block;">
+    {% if key == 6 %}
+    <div style="display: inline-block;">
+		<form action="/" method = 'GET'> 
+			<input type="submit" class="btn btn-default" name="yes" value="Yes"></input>
+		</form>
+	</div>
+    {% else %}
+    <div style="display: inline-block;">
 		<form action="/evaluation" method = 'GET'> 
 			<input type="submit" class="btn btn-default" name="yes" value="Yes"></input>
 		</form>
 	</div>
+    {% endif %}
+
 
 	<div style="float: left;  margin-right: 5%;">
 		<form action="/" method = 'GET' > 
